[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/player_ship.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.18427
height = 9.67931

[node name="Player" type="Area2D"]
position = Vector2( 187.32, 483.74 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.84079 )
shape = SubResource( 1 )

[node name="shoot_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
